--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,13 +1,3 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <!-- Iron elements -->
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
@@ -42,7 +32,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
-<link rel="import" href="my-greeting/my-greeting.html">
-<link rel="import" href="my-list/my-list.html">
-<link rel="import" href="nodes-list/nodes-list.html">
+<link rel="import" href="node-auth/node-auth.html">
+<link rel="import" href="node-data/node-data.html">
+<link rel="import" href="node-view/node-view.html">
+<link rel="import" href="node-list/node-list.html">
+<link rel="import" href="node-item/node-item.html">
+<link rel="import" href="node-input/node-input.html">
 
