creating graph view

--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -10,6 +10,7 @@
       app.route = 'all';
     });
 
+  /*
     page('/active', function () {
       app.route = 'active';
     });
@@ -17,8 +18,12 @@
   
     page('/completed', function () {
       app.route = 'completed';
-    });
+  });
 
+    page('/graph', function () {
+      app.route = 'graph';
+    });
+*/
     // add #! before urls
     page({
       hashbang: true
