--- a/app/elements/node-view/node-view.html
+++ b/app/elements/node-view/node-view.html
@@ -124,6 +124,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <iron-icon icon="node-icons:assignment-turned-in"></iron-icon>
             <span>Completed</span>
           </a>
+
+	  <a data-route="graph" href="/graph" tabindex="-1" on-click="closeDrawer">
+            <span>Graph</span>
+          </a>
         </paper-menu>
       </div>
       <paper-header-panel main>
