--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,11 @@
 
   <!-- For shared styles, shared-styles.html import in elements.html -->
   <style is="custom-style" include="shared-styles"></style>
+
+  <!-- build:js bower_components/d3/d3.min.js -->
+  <script src="bower_components/d3/d3.min.js"></script>
+  <!-- endbuild -->  
+  
 </head>
 
 <body unresolved class=>
