--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -27,3 +28,5 @@
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="graph-view/graph-view.html">
+<link rel="import" href="node-auth/node-auth.html">
+<link rel="import" href="node-data/node-data.html">
