--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -30,3 +30,4 @@
 <link rel="import" href="graph-view/graph-view.html">
 <link rel="import" href="node-auth/node-auth.html">
 <link rel="import" href="node-data/node-data.html">
+<link rel="import" href="link-data/link-data.html">
