--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -13,6 +13,7 @@
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-input/paper-textarea.html">
+<link rel="import" href="../bower_components/paper-slider/paper-slider.html">
 
 <link rel="import" href="../bower_components/firebase-element/firebase-collection.html">
 
