--- a/app/elements/graph-view/graph-view.html
+++ b/app/elements/graph-view/graph-view.html
@@ -13,7 +13,6 @@
 
 			#svg {
 				margin: 10px;
-				border: 1px solid #888;
 			}
 
 			line {
@@ -32,6 +31,8 @@
       }
 
 			.polygon {
+
+			.polygons {
 				fill: none;
 				stroke: #999;
 				pointer-events: all;
@@ -78,6 +79,11 @@
 
 			var link = svg.append("g").attr("class", "links").selectAll(".link"),
 	      node = svg.append("g").attr("class", "nodes").selectAll(".node");
+			var nodes = svg.append("g").attr("class", "nodes"),
+			node = nodes.selectAll(".node"),
+			links = svg.append("g").attr("class", "links"),
+			link = links.selectAll(".link"),
+			polygons = svg.append("g").attr("class", "polygons");
 
 			var voronoi = d3.voronoi()
 				.x(function(d) { return d.x; })
@@ -86,7 +92,17 @@
 
   		var update = function(){
 
-				node = node.data(graphView.nodes); //UPDATE
+				polygons.selectAll("polygon")
+					.data(graphView.nodes)
+					.enter().append("polygon")
+					.on("mouseover", mouseover)
+					.on("mouseout", mouseout)
+					.call(d3.drag()
+						.on("start", dragstarted)
+						.on("drag", dragged)
+						.on("end", dragended));
+
+				node = nodes.selectAll("g").data(graphView.nodes); //UPDATE
 				var nodeEnter = node.enter()
 					.append("g")
 					.attr("class", "node");
@@ -106,6 +122,20 @@
 				// 	link = link.enter().append("line")
 				// 		.attr("class", "link")
 				// 		.merge(link);
+
+				node.merge(nodeEnter);
+
+				node.call(d3.drag()
+										.on("start", dragstarted)
+										.on("drag", dragged)
+										.on("end", dragended));
+
+				link = links.selectAll(".link").data(graphView.links);
+				if (link.enter) {
+					link.enter().append("line")
+						.attr("class", "link")
+						.merge(link);
+
 				}
 
 				simulation.nodes(graphView.nodes);
@@ -140,7 +170,10 @@
 			}
 
 			function dragged(d) {
+
 				d3.select(this).select("g").attr("cx", d.fx = d3.event.x).attr("cy", d.fy = d3.event.y);
+
+				//var what = d3.select(this).select("g").attr("cx", d.fx = d3.event.x).attr("cy", d.fy = d3.event.y);
 				d.fx = d3.event.x;
 				d.fy = d3.event.y;
 
@@ -172,6 +205,18 @@
 	      //     .attr("y1", function(d) { return d.source.y; })
 	      //     .attr("x2", function(d) { return d.target.x; })
 	      //     .attr("y2", function(d) { return d.target.y; });
+
+				polygons.selectAll("polygon")
+					.attr("points", function(d, i) { return diagram[i]; });
+
+				links.selectAll(".link")
+				  .attr("x1",function(d) { return d.source.x; } )
+				  .attr("y1", function(d) { return d.source.y; })
+				  .attr("x2", function(d) { return d.target.x; })
+				  .attr("y2", function(d) { return d.target.y; });
+
+				node
+				 	.attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")" });
 			}
 
 			return {
